<?xml version="1.0" encoding="utf-8"?>
<!-- Floating pill nav. Sits over the list rather than docking to the window. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llNav"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:layout_gravity="bottom"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="22dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:baselineAligned="false"
    android:elevation="10dp"
    android:background="@drawable/bg_lav_nav"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <FrameLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_lav_circle_ink">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lav_home"
                app:tint="?attr/somaBg"
                android:contentDescription="@string/cd_nav_home" />

        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/navSearch"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_lav_search"
            app:tint="?attr/somaTextM"
            android:contentDescription="@string/cd_nav_search" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/navAdd"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_lav_circle_accent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_soma_plus"
                app:tint="@color/soma_accent_ink"
                android:contentDescription="@string/bento_add_task" />

        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/navSettings"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_lav_gear"
            app:tint="?attr/somaTextM"
            android:contentDescription="@string/cd_nav_settings" />

    </FrameLayout>

</LinearLayout>
